<resources>
    <string name="app_name">iuiuNet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password_mark"><u>Forgot password?</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="recover">submit</string>
    <string name="old_password">Enter Old password</string>
    <string name="new_password">Enter New password</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Submit</string>
    <string name="already_have_an_account_login">already have an account Login</string>
    <string name="enter_user_name">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="register"><u>Register</u></string>
    <string name="enter_first_name">First name</string>
    <string name="enter_last_name">Last name</string>
    <string name="permission_granted">permission granted</string>
    <string name="permission_denied">permission denied</string>
    <string name="grant_permission">Device id is required for registration, please grant permission</string>
    <string name="connection_time_out">Connection time out please try again</string>
    <string name="hand_shake_error">please try again</string>
    <string name="support">Support</string>
    <string name="support_message">​ If you have a problem using the app please send SMS to <font color='#FF7F27'>+923448797786</font> or email to <b>Test@test.com</b></string>
    <string name="created_account_successfully">Account created successfully</string>
    <string name="user_inactive">User Inactive</string>
    <string name="user_inactive_message">please visit your registered email and activate your account</string>
    <string name="not_found">Account not found</string>
    <string name="not_found_message">No account associated with this email address, Please register.</string>
    <string name="loading_videos">Loading Remote Files</string>
    <string name="action_download">Download</string>
    <string name="action_delete">Delete</string>
    <string name="file_already_exist">File already downloaded</string>
    <string name="password_error">Password must contain 6 character</string>
    <string name="check_credentials">Please check login credentials</string>
    <string name="password_changed">Password changed successfully</string>
    <string name="change_password">Change password</string>


    <!--array for language-->

    <string-array name="language_array">
        <item>English</item>
        <item>Arabic</item>
        <item>Swahili</item>
    </string-array>

    <!--wifi-->

    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>

    <string name="empty"></string>
    <string name="network_unreachable">Network unreachable</string>
    <string name="connecting">Connecting...</string>
    <string name="failed">Failed, please try again</string>
    <string name="send_array">Update file on Nurse</string>
    <string name="send_files">send Files</string>
    <string name="try_turning_wifi_off_on">Error occurred try reconnecting</string>
    <string name="received">Received</string>
    <string name="request_received">Request Received</string>
    <string name="file_request">Files Request</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="connection_abort">Aborting connection</string>
    <string name="check_internet">please check your internet connection and try again</string>
    <string name="want_to_delete">Do you want to delete selected files ?</string>
    <string name="username">username</string>
    <string name="logout">logout</string>
    <string name="connectivity">connectivity</string>
    <string name="wi_fi_connection">Wi-fi connection</string>
    <string name="sync_data">Sync data</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="sync_in_progress">Sync in progress</string>
    <string name="already_synced">Already Synced</string>
    <string name="support_url">www.pessoss.com/medvite_hilfe/support</string>
    <string name="privacy_policy_url">www.pessoss.com/​medvite​_privacy-pol</string>
    <string name="resend">Resend</string>


</resources>
