<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/text_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:layout_below="@+id/text_change_password"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_normal"
            android:text="@string/recover" />

    </RelativeLayout>
</ScrollView>